--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>WatchMate</title>
+		<title>WatchMate | Home</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
@@ -40,8 +40,9 @@
 						<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
 						<ul class="menu">
 							<li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
-							<li class="menu-item"><a href="review.html">Movie reviews</a></li>
-							<li class="menu-item"><a href="login.html">Login</a></li>
+							<li class="menu-item"><a href="review.html">Movie Reviews</a></li>
+							<li id="loginLink" class="menu-item"><a href="login.html">Login</a></li>
+							<li id="logoutLink" onclick="handlelogOut()" class="menu-item"><a href="#">Logout</a></li>
 						</ul> <!-- .menu -->
 
 						<!-- <form action="#" class="search-form">
@@ -99,6 +100,7 @@
 		<script src="js/app.js"></script>
 		<script src="./index.js"></script>
 		<script src="./review.js"></script>
+		<script src="./logout.js"></script>
 		
 	</body>
 
