--- a/registration.html
+++ b/registration.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Movie Review | Single</title>
+		<title>WatchMate | Sign Up</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
@@ -40,7 +40,7 @@
 						<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
 						<ul class="menu">
 							<li class="menu-item"><a href="index.html">Home</a></li>
-							<li class="menu-item"><a href="review.html">Movie reviews</a></li>
+							<li class="menu-item"><a href="review.html">Movie Reviews</a></li>
 							<li class="menu-item current-menu-item"><a href="login.html">Login</a></li>
 						</ul> <!-- .menu -->
 
@@ -57,6 +57,7 @@
 
 						<div class="content">
 							<div class="row">
+                                <p style="color: red;" id="signup-error-message"></p>
 
                                 <div class="login-container">
 
@@ -102,6 +103,7 @@
 		<script src="js/app.js"></script>
         <script src="./auth.js"></script>
 		<script src="./details.js"></script>
+        <script src="./logout.js"></script>
 		
 	</body>
 
