--- a/review.html
+++ b/review.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 		
-		<title>Movie Review | Review</title>
+		<title>WatchMate | Movie Reviews</title>
 
 		<!-- Loading third party fonts -->
 		<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
@@ -14,10 +14,6 @@
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="style.css">
 		
-		<!--[if lt IE 9]>
-		<script src="js/ie-support/html5.js"></script>
-		<script src="js/ie-support/respond.js"></script>
-		<![endif]-->
 
 	</head>
 
@@ -40,8 +36,9 @@
 						<button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
 						<ul class="menu">
 							<li class="menu-item"><a href="index.html">Home</a></li>
-							<li class="menu-item current-menu-item"><a href="review.html">Movie reviews</a></li>
-							<li class="menu-item"><a href="login.html">Login</a></li>
+							<li class="menu-item current-menu-item"><a href="review.html">Movie Reviews</a></li>
+							<li id="loginLink" class="menu-item"><a href="login.html">Login</a></li>
+							<li id="logoutLink" onclick="handlelogOut()" class="menu-item"><a href="#">Logout</a></li>
 						</ul> <!-- .menu -->
 
 						<form action="#" class="search-form">
@@ -72,11 +69,15 @@
 							</select>
 						</div>
 
+						<div style="text-align:center" id="nodata" class="nodata">
+							<img style="height: 200px;" src="./images/nodata.png" alt="" />
+						</div>
+
 						<div id="movie-list" class="movie-list">
 
 						</div> <!-- .movie-list -->
 
-						<div class="pagination">
+						<!-- <div class="pagination">
 							<a href="#" class="page-number prev"><i class="fa fa-angle-left"></i></a>
 							<span class="page-number current">1</span>
 							<a href="#" class="page-number">2</a>
@@ -84,7 +85,8 @@
 							<a href="#" class="page-number">4</a>
 							<a href="#" class="page-number">5</a>
 							<a href="#" class="page-number next"><i class="fa fa-angle-right"></i></a>
-						</div>
+						</div> -->
+
 					</div>
 				</div> <!-- .container -->
 			</main>
@@ -105,6 +107,7 @@
 		<script src="js/app.js"></script>
 		<script src="./review.js"></script>
 		<script src="./index.js"></script>
+		<script src="./logout.js"></script>
 		
 	</body>
 
