added error massege

--- a/details.html
+++ b/details.html
@@ -93,7 +93,7 @@
 								</div> -->
 							</div> <!-- .row -->
 
-							<h1>Give Review</h1>
+							<h1>Write a Review</h1>
 							<!-- <a class="btn btn-primary" href="">Create Review</a> -->
 							<div id="review-section" class="contact-form">
 								
@@ -104,7 +104,7 @@
 									<option value="4">4</option>
 									<option value="5">5</option>
 								</select>
-								<textarea id="review-massege" class="message" placeholder="Write your thoughts about this movie...."></textarea>
+								<textarea id="review-massege" class="message" placeholder="Share your thoughts about this content...."></textarea>
 								<input onclick="handleReview()" type="submit" value="Create Review">
 
 								<!-- <div id="error-message">
